docs: ajuste nas documentacoes das rotas no swagger
